Nueva estructura de proyecto, pendiente a mas cambios estructurales

--- a/styles/css/registarAlumno.css
+++ b/styles/css/registarAlumno.css
@@ -1,5 +1,5 @@
 html {
-  background: url("../imagenes/uabc-fca.jpg") no-repeat center center fixed;
+  background: url("../assets/img/uabc-fca.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
