--- a/views/registrar.html
+++ b/views/registrar.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>Registro de actividad</title>
     <!-- Bootstrap and CSS styles -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/registar.css" rel="stylesheet">
+    <link href="../assets/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="../styles/css/registrar.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -18,7 +18,7 @@
     <div style="height:30px"></div>
     <div id="Header">
         <script type="text/javascript">
-            $("#Header").load("__header-sae.php #header-sae");
+            $("#Header").load("shared/_header-sae.php #header-sae");
         </script>
     </div>
     <!-- FIN HEADER -->
