--- a/styles/css/sae.css
+++ b/styles/css/sae.css
@@ -1,6 +1,6 @@
 /* LOGIN */
 #login {
-  background: url("../imagenes/uabc-fca.jpg") no-repeat center center fixed;
+  background: url("../assets/img/uabc-fca.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -132,7 +132,7 @@
 /* REGISTRAR ACTIVIDAD */
 
 .fondo: {
-  background: url("../imagenes/solicitud-fondo.png");
+  background: url("../assets/img/solicitud-fondo.png");
 }
 
 #header-sae{
