--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>Solicitud de Permiso</title>
     <!-- Bootstrap and CSS styles -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/solicitud.css" rel="stylesheet">
+    <link href="../assets/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="../styles/css/solicitud.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!-- JQUERY -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -19,11 +19,11 @@
     <div style="height:30px"></div>
     <div id="Header">
         <script type="text/javascript">
-            $("#Header").load("__header-sae.php #header-sae");
+            $("#Header").load("shared/_header-sae.php #header-sae");
         </script>
     </div>
     <!-- FIN HEADER  -->
-    <form name="entireForm" action="_registrarSolicitud.php" method="post">
+    <form name="entireForm" action="control/registrarSolicitud.php" method="post">
     <div style="height:30px"></div>
     <div id="entirePage">
 
@@ -555,6 +555,6 @@
 </body>
 <!-- SCRIPTS -->
 <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/solicitud.js"></script>
+<script src="../assets/bootstrap/bootstrap.min.js"></script>
+<script src="../js/solicitud.js"></script>
 </html>
