--- a/styles/css/solicitud.css
+++ b/styles/css/solicitud.css
@@ -1,130 +1,119 @@
 /* body{
-  background: url("../assets/img/solicitud-fondo.png");
-  background-size: 35% 40%;
-} */
-
-label{
-  font-weight: 600;
+     background: url("../assets/img/solicitud-fondo.png");
+     background-size: 35% 40%;
 }
-
-.scrollable{
-  height: 560px;
-  overflow: scroll;
+ */
+ label{
+     font-weight: 600;
 }
-
-.btn{
-border-radius: 15px;
-transition-duration: 0.1s;
-color: #111;
-background-color: #FFF;
-border-color: #13673A;
+ .scrollable{
+     height: 560px;
+     overflow: scroll;
 }
-
-.btn:hover{
-background-color: #13673A;
-color: #FFF;
+ .btn{
+     border-radius: 15px;
+     transition-duration: 0.1s;
+     color: #111;
+     background-color: #FFF;
+     border-color: #13673A;
 }
-
-.btn:active {
-  background-color: #13673A;
+ .btn:hover{
+     background-color: #13673A;
+     color: #FFF;
 }
-
-.modal{
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
-  animation-name: openModalBlock;
-  animation-duration: 1.5s;
+ .btn:active {
+     background-color: #13673A;
 }
-
-.modal-content{
-  background-color: #f4f4f4;
-  margin: 20% auto;
-  padding: 20px;
-  width: 40%;
-  height: 13%;
-  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
-  animation-name: openModalBlock;
-  animation-duration: 1.5s;
+ .modal{
+     display: none;
+     position: fixed;
+     z-index: 1;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     overflow: auto;
+     background-color: rgba(0, 0, 0, 0.5);
+     animation-name: openModalBlock;
+     animation-duration: 1.5s;
 }
-
-.closeBtn{
-  color: #fff;
-  float: right;
-  font-size: 35px;
+ .modal-content{
+     background-color: #f4f4f4;
+     margin: 20% auto;
+     padding: 20px;
+     width: 40%;
+     height: 13%;
+     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
+     animation-name: openModalBlock;
+     animation-duration: 1.5s;
 }
-
-
-
-
-#header-sae{
-  background: #FFFFFFFF;
-  animation-name: openHeader;
-  animation-duration: 1.3s;
-  opacity: 0.95;
+ .closeBtn{
+     color: #fff;
+     float: right;
+     font-size: 35px;
 }
-
-#entirePage {
-  box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
-  border-radius: 35px;
-  background: #F4F4F4FF;
-  height: 80%;
-  width: 70%;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  display: block;
-  margin:0 auto;
- }
-
+ #header-sae{
+     background: #FFFFFFFF;
+     animation-name: openHeader;
+     animation-duration: 1.3s;
+     opacity: 0.95;
+}
+ #entirePage {
+     box-shadow: 0 5px 8px 0 rgba(0,0,0,0.4), 0 7px 20px 0 rgba(0,0,0,0.4);
+     border-radius: 35px;
+     background: #F4F4F4FF;
+     height: 80%;
+     width: 70%;
+     padding-top: 20px;
+     padding-bottom: 20px;
+     display: block;
+     margin:0 auto;
+}
  #buttons {
-   background: rgba(60, 180, 180);
-   padding-top: 15px;
-   padding-bottom: 15px;
-  }
-
-  #territorioNac{
-    max-width: inherit;
-    width: 175px;
-  }
-  #territorioExt{
-    max-width: inherit;
-    width: 175px;
-  }
-
-
-
-
-#section_one{
-  display: block;
-  animation-name: openSection;
-  animation-duration: 1.5s;
+     background: rgba(60, 180, 180);
+     padding-top: 15px;
+     padding-bottom: 15px;
 }
-#section_two{
-  display: none;
-  animation-name: openSection;
-  animation-duration: 1.5s;
+ #territorioNac{
+     max-width: inherit;
+     width: 175px;
 }
-#section_three{
-  display: none;
-  animation-name: openSection;
-  animation-duration: 1.5s;
+ #territorioExt{
+     max-width: inherit;
+     width: 175px;
 }
-
-#formExt{
-  display: none;
+ #section_one{
+     display: block;
+     animation-name: openSection;
+     animation-duration: 1.5s;
 }
-
-@keyframes openSection{
-  from{opacity: 0}
-  to {opacity: 1}
+ #section_two{
+     display: none;
+     animation-name: openSection;
+     animation-duration: 1.5s;
 }
-@keyframes openHeader{
-  from{opacity: 0}
-  to {opacity: 0.95}
+ #section_three{
+     display: none;
+     animation-name: openSection;
+     animation-duration: 1.5s;
 }
+ #formExt{
+     display: none;
+}
+ @keyframes openSection{
+     from{
+        opacity: 0
+    }
+     to {
+        opacity: 1
+    }
+}
+ @keyframes openHeader{
+     from{
+        opacity: 0
+    }
+     to {
+        opacity: 0.95
+    }
+}
+ 
