Modificacion en el registro solicitud

--- a/views/menu.html
+++ b/views/menu.html
@@ -25,6 +25,7 @@
     <!-- BOTONES ACTIVIDAD -->
     <div class="container">
         <div class="row justify-content-center">
+          <a href="solicitud_doc.php">asdfasdfasdfasdf</a>
             <div class="col-5 col-md-5 col-lg-3">
                 <input id="solicitarPermiso" class="boton" type="button" name="registar" value="SOLICITAR PERMISO">
             </div>
