--- a/views/registrar.html
+++ b/views/registrar.html
@@ -23,7 +23,8 @@
     </div>
     <!-- FIN HEADER -->
 
-    <form name="entireForm" action="control/registrarSolicitud.php" method="post">
+
+    <form name="entireForm" action="../control/registrarSolicitud.php" method="post">
         <div style="height:30px"></div>
         <div id="entirePage">
             <!-- FIRST ROW CONTAINING DROPDOWNS, MATRICULA INPUT AND TABLE -->
