--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -24,7 +24,7 @@
     </div>
     <!-- FIN HEADER  -->
 
-    <form name="entireForm" action="control/registrarSolicitud.php" method="post">
+    <form name="entireForm" action="../control/registrarSolicitud.php" method="post">
         <div style="height:30px"></div>
         <div id="entirePage">
 
