--- a/styles/css/solicitud.css
+++ b/styles/css/solicitud.css
@@ -35,7 +35,7 @@
      overflow: auto;
      background-color: rgba(0, 0, 0, 0.5);
      animation-name: openModalBlock;
-     animation-duration: 1.5s;
+     animation-duration: 1s;
 }
  .modal-content{
      background-color: #f4f4f4;
@@ -108,6 +108,7 @@
         opacity: 1
     }
 }
+
  @keyframes openHeader{
      from{
         opacity: 0
@@ -116,4 +117,12 @@
         opacity: 0.95
     }
 }
- 
+
+@keyframes openModalBlock{
+    from{
+       opacity: 0
+   }
+    to {
+       opacity: 1
+   }
+}
