--- a/views/menu.html
+++ b/views/menu.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
-<head>
+<head >
     <meta charset="UTF-8">
     <title>Menu</title>
     <link href="../assets/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -17,6 +18,7 @@
     <div id="Header">
         <script type="text/javascript">
             $("#Header").load("shared/_header-sae.php #header-sae");
+
         </script>
     </div>
     <!-- FIN HEADER -->
@@ -50,25 +52,10 @@
                             <th>Fecha</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Tecnologias renovables</td>
-                            <td>Rechazada</td>
-                            <td><a href="">Archivo.pdf</a></td>
-                            <td>2018/02/02</td>
-                        </tr>
-                        <tr>
-                            <td>Tecnologias renovables</td>
-                            <td>Rechazada</td>
-                            <td><a href="">Archivo.pdf</a></td>
-                            <td>2018/02/02</td>
-                        </tr>
-                        <tr>
-                            <td>Tecnologias renovables</td>
-                            <td>Rechazada</td>
-                            <td><a href="">Archivo.pdf</a></td>
-                            <td>2018/02/02</td>
-                        </tr>
+                    <tbody id="consulta">
+                      <!-- Cargar Folios - AJAX -->
+                      
+                      <!-- Cargar Folios - AJAX -->
                     </tbody>
                 </table>
             </div>
@@ -108,7 +95,7 @@
                 </table>
             </div>
         </div>
-            
+
         </div>
         <div class="row justify-content-center">
 
