--- a/views/registrar.html
+++ b/views/registrar.html
@@ -31,17 +31,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        <p>
-                            <label>LA ACTIVIDAD SE REALIZO DENTRO DEL CAMPUS?</label>
-                        </p>
-
-                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-success btn-sm active" id="confirmacionSi">
-                        <input type="radio" name="confirmacion" value="Si" checked> SI
-                    </label>
-                            <label class="btn btn-success btn-sm" id="confirmacionNo">
-                        <input type="radio" name="confirmacion" value="No"> NO
-                    </label>
+                        <label>LA ACTIVIDAD SE REALIZO DENTRO DEL CAMPUS?</label>
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons" id="confirmacion_button_group">
+                          <label class="btn btn-success btn-sm active" id="confirmacionSi">
+                            <input type="radio" name="confirmacion" value="Si" checked> SI
+                          </label>
+                          <label class="btn btn-success btn-sm" id="confirmacionNo">
+                            <input type="radio" name="confirmacion" value="No"> NO
+                          </label>
                         </div>
                     </div>
                     <div class="col"> </div>
@@ -55,6 +52,7 @@
                         </div>
                     </div>
                 </div>
+                <br>
                 <div class="row">
                     <div class="col-11 col-md-4">
                         <div class="form-group">
