--- a/views/solicitud.html
+++ b/views/solicitud.html
@@ -35,16 +35,15 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 col-sm-4">
-
-                            <label> SELECCIONE SI EL EVENTO SERA DENTRO DE TERRITORIO NACIONAL O EXTRANJERO: </label>
-                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                              <label> SELECCIONE SI EL EVENTO SERA DENTRO DE TERRITORIO NACIONAL O EXTRANJERO: </label>
+                              <div class="btn-group btn-group-toggle" data-toggle="buttons" id="territory_button_group">
                                 <label class="btn btn-success btn-sm active" id="territorioNac">
-                              <input type="radio" name="territorio" value="Nacional" checked> NACIONAL
-                            </label>
+                                  <input type="radio" name="territorio" value="Nacional" checked> NACIONAL
+                                </label>
                                 <label class="btn btn-success btn-sm" id="territorioExt">
-                              <input type="radio" name="territorio" value="Extranjero"> EXTRANJERO
-                            </label>
-                            </div>
+                                  <input type="radio" name="territorio" value="Extranjero"> EXTRANJERO
+                                </label>
+                              </div>
                             <br> <br>
 
                             <!-- FORMS - TERRITORIO NACIONAL/EXTRANJERO -->
