Arreglo a funciones de deshabilitacion en registrar.js

--- a/views/registrar.html
+++ b/views/registrar.html
@@ -37,10 +37,10 @@
                         <label>LA ACTIVIDAD SE REALIZO DENTRO DEL CAMPUS?</label>
                         <div class="btn-group btn-group-toggle" data-toggle="buttons" id="confirmacion_button_group">
                           <label class="btn btn-success btn-sm active" id="confirmacionSi">
-                            <input type="radio" name="confirmacion" value="Si" checked> SI
+                            <input  type="radio" name="confirmacion" value="Si" checked> SI
                           </label>
                           <label class="btn btn-success btn-sm" id="confirmacionNo">
-                            <input type="radio" name="confirmacion" value="No"> NO
+                            <input  type="radio" name="confirmacion" value="No"> NO
                           </label>
                         </div>
                     </div>
@@ -121,9 +121,9 @@
                         <div class="form-group">
                             <label>INGRESAR MATRICULA DE LOS INTEGRANTES QUE ASISTIRAN:</label>
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                <input id="ingresar_matricula" type="text" class="form-control" placeholder="ej. 1218229" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
-                                    <button class="btn btn-dark" type="button">Ingresar</button>
+                                    <button id="boton_ingresar_matricula"class="btn btn-dark" type="button">Ingresar</button>
                                 </div>
                             </div>
                         </div>
