Cambios a estilos de labels en vista previa, y agregado de boton para cerrar vista previa

--- a/styles/css/menu.css
+++ b/styles/css/menu.css
@@ -32,6 +32,11 @@
 		animation-duration: .5s;
 }
 
+.preview_label{
+	font-size: 1.1rem;
+	font-weight: bold;
+}
+
 
 @keyframes openModalBlock{
     from{
