Validacion de llenado a form, funcionalidad a detectar cuando es solicitud previa y cuando no lo es

--- a/views/registrar.html
+++ b/views/registrar.html
@@ -162,7 +162,7 @@
                     <div class="col-12">
                         <div class="form-group">
                             <label>LUGAR DEL EVENTO</label>
-                            <input type="text" class="form-control" id="lugarEvento" placeholder="ej. CECUT">
+                            <input type="text" class="form-control" id="lugar_evento" name="lugar_evento" placeholder="ej. CECUT">
                         </div>
                         <br>
                         <div class="text-center">
@@ -183,7 +183,7 @@
                     <div class="col-8 col-md-7">
                         <div class="form-group">
                             <label for="nombreActividad">Nombre de la actividad:</label>
-                            <input type="text" class="form-control" id="nombreActividad">
+                            <input type="text" class="form-control" id="nombreActividad" name="nombreActividad">
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                     <div class="col-8 col-md-7">
                         <div class="form-group">
                             <label for="nombreOrganiza">Nombre de quien organiza:</label>
-                            <input type="text" class="form-control" id="nombreOrganiza">
+                            <input type="text" class="form-control" id="nombreOrganiza" name="nombreOrganiza">
                         </div>
                         <br>
                         <div class="text-center">
@@ -248,7 +248,7 @@
                 </div>
                 <hr>
                 <div class="text-center">
-                    <button class="btn btn-primary btn-lg">SOLICITAR PERMISO</button>
+                    <button id="registrarActividad" class="btn btn-primary btn-lg">REGISTRAR ACTIVIDAD</button>
                 </div>
             </div>
             <!-- FIN JUSTIFICACION DEL EVENTO -->
